Fix sync screen on narrower screens

--- a/assets/auth.css
+++ b/assets/auth.css
@@ -19,3 +19,7 @@
   width: 37px;
   position: relative;
 }
+
+.btn {
+  white-space: normal;
+}
